<?xml version="1.0"?>
<package format="2">
  <name>group_1_project_3a</name>
  <version>0.0.0</version>
  <description>The group_1_project_3a package</description>

  <maintainer email="harish@todo.todo">harish</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>twist</build_depend>
  <build_depend>darknet_ros</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msg</build_export_depend>
  <build_export_depend>twist</build_export_depend>
  <build_export_depend>darknet_ros</build_export_depend>
  <build_export_depend>darknet_ros_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msg</exec_depend>
  <exec_depend>twist</exec_depend>
  <exec_depend>darknet_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>
  <export></export>
</package>
